services/service-a/configuration/base/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: service-a
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`service-a.localhost`)
      kind: Rule
      services:
        - name: service-a
          port: 80
